<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"



    >


    <group android:checkableBehavior="single"
        android:visible="true"
        android:id="@+id/group1"

        >

        <item
            android:id="@+id/item_popular"
            android:icon="@drawable/ic_action_navigation_item"
            android:title="@string/popular"
            />

        <item
            android:id="@+id/item_new"
            android:icon="@drawable/ic_action_navigation_item"
            android:title="@string/new_peoduct"

            />

        <item
            android:id="@+id/item_MostSeler"
            android:icon="@drawable/ic_action_navigation_item"
            android:title="@string/top_seller"


            />

        <item
            android:id="@+id/item_gallery"
            android:icon="@drawable/ic_action_navigation_item"
            android:title="@string/categories"
            />

    </group>
    <item
        android:id="@+id/register_item"
        android:icon="@drawable/ic_action_register"
        android:title="@string/register_item"

        />

    <group android:checkableBehavior="single"
        android:visible="true"
        android:id="@+id/group2"
        >
        <item
            android:id="@+id/item_cart"
            android:icon="@drawable/ic_gallery_item_cart"
            android:title="@string/cart"
            />
    </group>

    <group android:checkableBehavior="single"
        android:visible="true"
        android:id="@+id/group3"
        >
        <item
            android:id="@+id/item_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/setting"
            />

        <item
            android:id="@+id/item_about"

            android:title="@string/about_us"
            />
        <!--  android:icon="@drawable/ic_action_aboutus_icon" -->
    </group>


</menu>