<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/information_product_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@android:color/white"
    android:overScrollMode="always"
    tools:context=".information.ProductInformationFragment"
    android:layout_marginBottom="2dp"
    android:layoutDirection="rtl"
    >



    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"

        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_information"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="آواتار مارکت" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_gellery_product_item"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_information" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_item_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_gellery_product_item"
            >
            <TextView
                android:layout_margin="2dp"
                android:id="@+id/item_title_product"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="2dp"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_price"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toStartOf="@+id/cardview_totalsales"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_item_title">

            <TextView
                android:layout_margin="2dp"
                android:id="@+id/item_price_product"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="2dp" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_totalsales"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardview_price"
            app:layout_constraintTop_toBottomOf="@+id/cardView_item_title">

            <TextView
                android:id="@+id/total_sales_item_product"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="2dp" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardview_totalsales">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                >

                <TextView
                    android:id="@+id/add_comment_text_view"
                    android:text="@string/add_comment_your"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="2dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                >

                <TextView
                    android:id="@+id/show_comment_text_view"
                    android:text="@string/show_comment"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="2dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="388dp"
            android:layout_height="70dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <RatingBar
                android:id="@+id/ratingBar_item_product"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@android:color/white"
                android:numStars="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="410dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_description_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@android:color/white" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape_loz"
            android:textColor="@android:color/white"
            android:text="@string/addtocart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:layout_marginBottom="4dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>